# rag_against_the_machine

./: Makefile  README.md  pyproject.toml  setup.cfg
data/output/search_results/: dataset_code_private.json  dataset_code_public.json  dataset_docs_private.json  dataset_docs_public.json
data/output/search_results_and_answer/: dataset_docs_public.json
data/processed/bm25_index/: corpus.mmindex.json  indptr.csc.index.npy  params.index.json  vocab.index.json
exams_pkg/data/output/search_results/: dataset_code_private.json  dataset_docs_public.json
exams_pkg/data/processed/bm25_index/: corpus.mmindex.json  params.index.json
student/: __main__.py  chunking.py  gearing.py  models.py  utils.py
