[project]
name = "rag"
version = "0.1.0"
description = "RAG against the machine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "pydantic>=2.13.4",
    "semchunk>=4.0.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]
